llm-d/extproc-overflow-bench/envoy/bootstrap.yaml
admin: { address: { socket_address: { address: 0.0.0.0, port_value: 9901 } } }
static_resources:
  listeners:
  - name: l
    address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          stream_idle_timeout: 0s
          route_config:
            virtual_hosts:
            - name: vh
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: mock, timeout: 0s }
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service: { envoy_grpc: { cluster_name: epp }, timeout: 300s }
              failure_mode_allow: true
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
                request_body_mode: NONE
                response_body_mode: NONE
          - name: envoy.filters.http.router
            typed_config: { "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router }
  clusters:
  - name: mock
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment: { cluster_name: mock, endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: sim.extproc-bench.svc.cluster.local, port_value: 8000 } } } }] }] }
    circuit_breakers: { thresholds: [{ max_connections: 1000000, max_requests: 1000000, max_pending_requests: 1000000 }] }
  - name: epp
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config: { http2_protocol_options: {} }
    load_assignment: { cluster_name: epp, endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: epp-epp.extproc-bench.svc.cluster.local, port_value: 9002 } } } }] }] }
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config: { "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext }
    circuit_breakers: { thresholds: [{ max_connections: 1000000, max_requests: 1000000, max_pending_requests: 1000000 }] }
